Changelog for Shake

0.13.2
    #95, ensure progress never gets corrupted
    #124, add a profile report demo
    #128, allow long Ninja command lines
    Fix --report=- for builds with no commands in them
0.13.1
    Remove all package upper bounds
    #126, Ninja compatibility if Ninja fails to create a file
    #123, generate Chrome compatible traces
0.13
    #122, make --report=- write a report to stdout
    Improve the profile report summary
    #122, turn shakeReport into a list of files, instead of a Maybe
    #60, improve how command lines are printed out
    #113, print info about copyFile' and removeFilesAfter at -V
    Replace **> with |*> , ?>> with &?> and *>> with &*>
    IMPORTANT: Incompatible on disk format change
    #83, support digest rules for files
    #83, add shakeChange parameter and --digest* args
    #83, add equalValue function to Rule typeclass
    Deprecate defaultRule
    Make literal *> matches take precedence over wildcard matches
    #120, add a priority function
0.12
    #62, move to a ReaderT/IORef for the Action monad
    Add DEPRECATED pragmas on system' calls
    Delete Development.Shake.Sys, use command or cmd instead
    Add a 'console' pool to Ninja
    Avoid using System.Cmd (deprecated in GHC HEAD)
    #41, use higher precision file times on POSIX
    #117, use higher precision times for Unicode files on Windows
    #118, add support for Ninja -t compdb
    #119, more test fixes for Linux GHC 7.8
0.11.7
    #119, test fixes for Linux GHC 7.8
0.11.6
    #114, run build.sh in the test suite with sh
    #115, fix the test suite on Linux GHC 7.8
    #116, fix for GHC 7.10
0.11.5
    Include the sources for flot and jQuery in the dist tarball
    Note that .. in FilePattern values is unlikely to be correct
    #109, make removeFiles delete directories that match
    #84, make removeFiles not delete empty unmatched directories
    #111, fixes to the user manual
    #110, don't give a warning if -threaded is turned off