@@ -1,5 +1,6 @@
 Changelog for Shake
 
+    Switch to an underlying continuation monad
 0.13.2
     #95, ensure progress never gets corrupted
     #124, add a profile report demo
